@@ -4,6 +4,7 @@ Overview of changes in lightdm 1.0.1
     * GTK greeter now initializes i18n
     * Start authentication for automtically selected user in GTK greeter
     * Link liblightdm-qt against QtGui
+    * Fix liblightdm-qt crashing when face images are installed
 
 Overview of changes in lightdm 1.0.0
 
